--- a/LearnOpenGL_Tutorial.cbp
+++ b/LearnOpenGL_Tutorial.cbp
@@ -39,9 +39,11 @@
 		<Unit filename="assets/awesomeface.png" />
 		<Unit filename="assets/container.jpg" />
 		<Unit filename="assets/wall.jpg" />
+		<Unit filename="fonts/NotoMono-Regular.ttf" />
 		<Unit filename="glad.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="include/Camera.h" />
 		<Unit filename="include/Shader.h" />
 		<Unit filename="include/glm/CMakeLists.txt" />
 		<Unit filename="include/glm/common.hpp" />
